[package]
name = "convoyeur"
version = "0.0.1"
edition = "2021"
license = "LiliQ-P-1.1"

[dependencies]
actix-web = { version = "4.11.0", default-features = false }
env_logger = "0.11"
hcl-rs = "0.18.5"
little_exif = "0.6.8"
log = "0.4"
reqwest = { version = "0.12.15", features = ["charset", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }

[profile.release-bin]
inherits = "release"
incremental = false
strip = true
lto = true
